@@ -17,24 +17,17 @@
  */
 package de.tudarmstadt.ukp.inception.export;
 
-import static de.tudarmstadt.ukp.clarin.webanno.api.annotation.util.WebAnnoCasUtil.createSentence;
-import static de.tudarmstadt.ukp.clarin.webanno.api.annotation.util.WebAnnoCasUtil.createToken;
-import static de.tudarmstadt.ukp.clarin.webanno.api.annotation.util.WebAnnoCasUtil.exists;
-import static de.tudarmstadt.ukp.clarin.webanno.api.annotation.util.WebAnnoCasUtil.getRealCas;
-import static de.tudarmstadt.ukp.clarin.webanno.api.annotation.util.WebAnnoCasUtil.selectSentences;
 import static de.tudarmstadt.ukp.clarin.webanno.api.casstorage.CasAccessMode.EXCLUSIVE_WRITE_ACCESS;
 import static de.tudarmstadt.ukp.clarin.webanno.api.casstorage.CasAccessMode.UNMANAGED_ACCESS;
-import static de.tudarmstadt.ukp.inception.project.api.ProjectService.DOCUMENT_FOLDER;
-import static de.tudarmstadt.ukp.inception.project.api.ProjectService.PROJECT_FOLDER;
-import static de.tudarmstadt.ukp.inception.project.api.ProjectService.SOURCE_FOLDER;
 import static de.tudarmstadt.ukp.inception.project.api.ProjectService.withProjectLogger;
-import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.CHAIN_TYPE;
 import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.CURATION_USER;
+import static de.tudarmstadt.ukp.inception.support.uima.WebAnnoCasUtil.exists;
+import static de.tudarmstadt.ukp.inception.support.uima.WebAnnoCasUtil.getRealCas;
+import static java.util.Arrays.asList;
 import static java.util.Collections.unmodifiableList;
 import static java.util.Collections.unmodifiableMap;
 import static java.util.Comparator.comparing;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.io.FileUtils.forceDelete;
 import static org.apache.uima.fit.factory.TypeSystemDescriptionFactory.createTypeSystemDescription;
 import static org.apache.uima.fit.util.CasUtil.getType;
@@ -47,13 +40,10 @@ import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.net.MalformedURLException;
 import java.nio.file.Files;
-import java.text.BreakIterator;
 import java.util.ArrayList;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 
 import org.apache.commons.lang3.ClassUtils;
@@ -61,10 +51,6 @@ import org.apache.commons.lang3.tuple.Pair;
 import org.apache.uima.UIMAException;
 import org.apache.uima.cas.CAS;
 import org.apache.uima.cas.CASException;
-import org.apache.uima.cas.Feature;
-import org.apache.uima.cas.FeatureStructure;
-import org.apache.uima.cas.Type;
-import org.apache.uima.cas.text.AnnotationFS;
 import org.apache.uima.resource.ResourceInitializationException;
 import org.apache.uima.resource.metadata.TypeSystemDescription;
 import org.slf4j.Logger;
@@ -76,7 +62,6 @@ import org.springframework.context.event.EventListener;
 import org.springframework.core.annotation.AnnotationAwareOrderComparator;
 import org.springframework.transaction.annotation.Transactional;
 
-import de.tudarmstadt.ukp.clarin.webanno.api.annotation.util.WebAnnoCasUtil;
 import de.tudarmstadt.ukp.clarin.webanno.api.casstorage.CasStorageService;
 import de.tudarmstadt.ukp.clarin.webanno.api.export.DocumentImportExportService;
 import de.tudarmstadt.ukp.clarin.webanno.api.format.FormatSupport;
@@ -88,20 +73,20 @@ import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
 import de.tudarmstadt.ukp.clarin.webanno.model.Mode;
 import de.tudarmstadt.ukp.clarin.webanno.model.Project;
 import de.tudarmstadt.ukp.clarin.webanno.model.SourceDocument;
-import de.tudarmstadt.ukp.clarin.webanno.model.TagSet;
 import de.tudarmstadt.ukp.dkpro.core.api.metadata.type.DocumentMetaData;
 import de.tudarmstadt.ukp.dkpro.core.api.metadata.type.TagsetDescription;
 import de.tudarmstadt.ukp.dkpro.core.api.segmentation.type.Sentence;
 import de.tudarmstadt.ukp.dkpro.core.api.segmentation.type.Token;
+import de.tudarmstadt.ukp.inception.annotation.layer.chain.ChainLayerSupport;
 import de.tudarmstadt.ukp.inception.annotation.storage.CasStorageSession;
-import de.tudarmstadt.ukp.inception.documents.api.RepositoryProperties;
 import de.tudarmstadt.ukp.inception.export.config.DocumentImportExportServiceAutoConfiguration;
 import de.tudarmstadt.ukp.inception.export.config.DocumentImportExportServiceProperties;
 import de.tudarmstadt.ukp.inception.export.config.DocumentImportExportServiceProperties.CasDoctorOnImportPolicy;
 import de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService;
 import de.tudarmstadt.ukp.inception.support.logging.BaseLoggers;
 import de.tudarmstadt.ukp.inception.support.logging.LogMessage;
-import it.unimi.dsi.fastutil.ints.IntArrayList;
+import de.tudarmstadt.ukp.inception.support.uima.SegmentationUtils;
+import de.tudarmstadt.ukp.inception.support.uima.WebAnnoCasUtil;
 
 /**
  * <p>
@@ -122,7 +107,6 @@ public class DocumentImportExportServiceImpl
 
     private static final Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-    private final RepositoryProperties repositoryProperties;
     private final CasStorageService casStorageService;
     private final AnnotationSchemaService annotationService;
     private final DocumentImportExportServiceProperties properties;
@@ -136,14 +120,13 @@ public class DocumentImportExportServiceImpl
 
     private final TypeSystemDescription schemaTypeSystem;
 
-    public DocumentImportExportServiceImpl(RepositoryProperties aRepositoryProperties,
+    public DocumentImportExportServiceImpl(
             @Lazy @Autowired(required = false) List<FormatSupport> aFormats,
             CasStorageService aCasStorageService, AnnotationSchemaService aAnnotationService,
             DocumentImportExportServiceProperties aServiceProperties,
             ChecksRegistry aChecksRegistry, RepairsRegistry aRepairsRegistry,
             FormatSupport aFallbackFormat)
     {
-        repositoryProperties = aRepositoryProperties;
         casStorageService = aCasStorageService;
         annotationService = aAnnotationService;
         formatsProxy = aFormats;
@@ -164,10 +147,10 @@ public class DocumentImportExportServiceImpl
 
     /* package private */ void init()
     {
-        Map<String, FormatSupport> formatMap = new LinkedHashMap<>();
+        var formatMap = new LinkedHashMap<String, FormatSupport>();
 
         if (formatsProxy != null) {
-            List<FormatSupport> forms = new ArrayList<>(formatsProxy);
+            var forms = new ArrayList<>(formatsProxy);
             AnnotationAwareOrderComparator.sort(forms);
             forms.forEach(format -> {
                 formatMap.put(format.getId(), format);
@@ -187,16 +170,17 @@ public class DocumentImportExportServiceImpl
         if (aFormat.isReadable() && !aFormat.isWritable()) {
             return "read only";
         }
-        else if (!aFormat.isReadable() && aFormat.isWritable()) {
+
+        if (!aFormat.isReadable() && aFormat.isWritable()) {
             return "write only";
         }
-        else if (aFormat.isReadable() && aFormat.isWritable()) {
+
+        if (aFormat.isReadable() && aFormat.isWritable()) {
             return "read/write";
         }
-        else {
-            throw new IllegalStateException(
-                    "Format [" + aFormat.getId() + "] must be at least readable or writable.");
-        }
+
+        throw new IllegalStateException(
+                "Format [" + aFormat.getId() + "] must be at least readable or writable.");
     }
 
     @Override
@@ -249,7 +233,7 @@ public class DocumentImportExportServiceImpl
         throws IOException, UIMAException
     {
         try (var logCtx = withProjectLogger(aDocument.getProject())) {
-            Map<Pair<Project, String>, Object> bulkOperationContext = aBulkOperationContext;
+            var bulkOperationContext = aBulkOperationContext;
             if (bulkOperationContext == null) {
                 bulkOperationContext = new HashMap<>();
             }
@@ -304,30 +288,62 @@ public class DocumentImportExportServiceImpl
             TypeSystemDescription aFullProjectTypeSystem)
         throws UIMAException, IOException
     {
-        TypeSystemDescription tsd = aFullProjectTypeSystem;
+        var cas = importCasFromFileNoChecks(aFile, aDocument, aFormat, aFullProjectTypeSystem);
+
+        // Convert the source document to CAS
+        var format = getReadableFormatById(aFormat).orElseThrow(
+                () -> new IOException("No reader available for format [" + aFormat + "]"));
+
+        runCasDoctorOnImport(aDocument, format, cas);
+
+        return cas;
+    }
+
+    @Override
+    public CAS importCasFromFileNoChecks(File aFile, SourceDocument aDocument)
+        throws UIMAException, IOException
+    {
+        return importCasFromFileNoChecks(aFile, aDocument, aDocument.getFormat(), null);
+    }
+
+    @Override
+    public CAS importCasFromFileNoChecks(File aFile, SourceDocument aDocument,
+            TypeSystemDescription aFullProjectTypeSystem)
+        throws UIMAException, IOException
+    {
+        return importCasFromFileNoChecks(aFile, aDocument, aDocument.getFormat(),
+                aFullProjectTypeSystem);
+    }
+
+    private CAS importCasFromFileNoChecks(File aFile, SourceDocument aDocument, String aFormat,
+            TypeSystemDescription aFullProjectTypeSystem)
+        throws UIMAException, IOException
+    {
+        var tsd = aFullProjectTypeSystem;
 
         if (tsd == null) {
             tsd = annotationService.getFullProjectTypeSystem(aDocument.getProject());
         }
 
         // Convert the source document to CAS
-        FormatSupport format = getReadableFormatById(aFormat).orElseThrow(
+        var format = getReadableFormatById(aFormat).orElseThrow(
                 () -> new IOException("No reader available for format [" + aFormat + "]"));
 
         // Prepare a CAS with the project type system
-        CAS cas = WebAnnoCasUtil.createCas(tsd);
+        var cas = WebAnnoCasUtil.createCas(tsd);
         format.read(aDocument.getProject(), WebAnnoCasUtil.getRealCas(cas), aFile);
 
         // Create sentence / token annotations if they are missing - sentences first because
         // tokens are then generated inside the sentences
-        splitSenencesIfNecssaryAndCheckQuota(cas, format);
-        splitTokensIfNecssaryAndCheckQuota(cas, format);
+        splitSenencesIfNecssary(cas, format);
+        checkSentenceQuota(cas, format);
+
+        splitTokens(cas, format);
+        checkTokenQuota(cas, format);
 
         LOG.info("Imported CAS with [{}] tokens and [{}] sentences from file [{}] (size: {} bytes)",
                 cas.getAnnotationIndex(getType(cas, Token.class)).size(),
                 cas.getAnnotationIndex(getType(cas, Sentence.class)).size(), aFile, aFile.length());
-
-        runCasDoctorOnImport(aDocument, format, cas);
 
         return cas;
     }
@@ -344,23 +360,28 @@ public class DocumentImportExportServiceImpl
         }
 
         var messages = new ArrayList<LogMessage>();
-        CasDoctor casDoctor = new CasDoctor(checksRegistry, repairsRegistry);
+        var casDoctor = new CasDoctor(checksRegistry, repairsRegistry);
         casDoctor.setActiveChecks(
                 checksRegistry.getExtensions().stream().map(c -> c.getId()).toArray(String[]::new));
         casDoctor.analyze(aDocument.getProject(), aCas, messages, true);
     }
 
-    private void splitTokensIfNecssaryAndCheckQuota(CAS cas, FormatSupport aFormat)
+    private void splitTokens(CAS cas, FormatSupport aFormat)
         throws IOException
     {
-        Type tokenType = getType(cas, Token.class);
+        var tokenType = getType(cas, Token.class);
 
         if (!exists(cas, tokenType)) {
-            tokenize(cas);
+            SegmentationUtils.tokenize(cas);
         }
+    }
+
+    private void checkTokenQuota(CAS cas, FormatSupport aFormat) throws IOException
+    {
+        var tokenType = getType(cas, Token.class);
 
         if (properties.getMaxTokens() > 0) {
-            int tokenCount = cas.getAnnotationIndex(tokenType).size();
+            var tokenCount = cas.getAnnotationIndex(tokenType).size();
             if (tokenCount > properties.getMaxTokens()) {
                 throw new IOException("Number of tokens [" + tokenCount + "] exceeds limit ["
                         + properties.getMaxTokens()
@@ -375,17 +396,22 @@ public class DocumentImportExportServiceImpl
         }
     }
 
-    private void splitSenencesIfNecssaryAndCheckQuota(CAS cas, FormatSupport aFormat)
+    private void splitSenencesIfNecssary(CAS cas, FormatSupport aFormat)
         throws IOException
     {
-        Type sentenceType = getType(cas, Sentence.class);
+        var sentenceType = getType(cas, Sentence.class);
 
         if (!exists(cas, sentenceType)) {
-            splitSentences(cas);
+            SegmentationUtils.splitSentences(cas);
         }
+    }
+
+    private void checkSentenceQuota(CAS cas, FormatSupport aFormat) throws IOException
+    {
+        var sentenceType = getType(cas, Sentence.class);
 
         if (properties.getMaxSentences() > 0) {
-            int sentenceCount = cas.getAnnotationIndex(sentenceType).size();
+            var sentenceCount = cas.getAnnotationIndex(sentenceType).size();
             if (sentenceCount > properties.getMaxSentences()) {
                 throw new IOException("Number of sentences [" + sentenceCount + "] exceeds limit ["
                         + properties.getMaxSentences()
@@ -397,133 +423,6 @@ public class DocumentImportExportServiceImpl
         if (!exists(cas, sentenceType)) {
             throw new IOException("The document appears to be empty. Unable to detect any "
                     + "sentences. Empty documents cannot be imported.");
-        }
-    }
-
-    public static void splitSentences(CAS aCas)
-    {
-        splitSentences(aCas, null);
-    }
-
-    public static void splitSentences(CAS aCas, Iterable<? extends AnnotationFS> aZones)
-    {
-        if (aCas.getDocumentText() == null) {
-            return;
-        }
-
-        int[] sortedZoneBoundaries = null;
-
-        if (aZones != null) {
-            var zoneBoundaries = new IntArrayList();
-            for (var zone : aZones) {
-                zoneBoundaries.add(zone.getBegin());
-                zoneBoundaries.add(zone.getEnd());
-            }
-
-            sortedZoneBoundaries = zoneBoundaries.intStream().distinct().sorted().toArray();
-        }
-
-        if (sortedZoneBoundaries == null || sortedZoneBoundaries.length < 2) {
-            sortedZoneBoundaries = new int[] { 0, aCas.getDocumentText().length() };
-        }
-
-        for (int i = 1; i < sortedZoneBoundaries.length; i++) {
-            var begin = sortedZoneBoundaries[i - 1];
-            var end = sortedZoneBoundaries[i];
-            BreakIterator bi = BreakIterator.getSentenceInstance(Locale.US);
-            bi.setText(aCas.getDocumentText().substring(begin, end));
-            int last = bi.first();
-            int cur = bi.next();
-            while (cur != BreakIterator.DONE) {
-                int[] span = new int[] { last + begin, cur + begin };
-                trim(aCas.getDocumentText(), span);
-                if (!isEmpty(span[0], span[1])) {
-                    aCas.addFsToIndexes(createSentence(aCas, span[0], span[1]));
-                }
-                last = cur;
-                cur = bi.next();
-            }
-        }
-    }
-
-    public static void tokenize(CAS aCas)
-    {
-        if (aCas.getDocumentText() == null) {
-            return;
-        }
-
-        BreakIterator bi = BreakIterator.getWordInstance(Locale.US);
-        for (AnnotationFS s : selectSentences(aCas)) {
-            bi.setText(s.getCoveredText());
-            int last = bi.first();
-            int cur = bi.next();
-            while (cur != BreakIterator.DONE) {
-                int[] span = new int[] { last, cur };
-                trim(s.getCoveredText(), span);
-                if (!isEmpty(span[0], span[1])) {
-                    aCas.addFsToIndexes(
-                            createToken(aCas, span[0] + s.getBegin(), span[1] + s.getBegin()));
-                }
-                last = cur;
-                cur = bi.next();
-            }
-        }
-    }
-
-    /**
-     * Remove trailing or leading whitespace from the annotation.
-     * 
-     * @param aText
-     *            the text.
-     * @param aSpan
-     *            the offsets.
-     */
-    public static void trim(String aText, int[] aSpan)
-    {
-        String data = aText;
-
-        int begin = aSpan[0];
-        int end = aSpan[1] - 1;
-
-        // Remove whitespace at end
-        while ((end > 0) && trimChar(data.charAt(end))) {
-            end--;
-        }
-        end++;
-
-        // Remove whitespace at start
-        while ((begin < end) && trimChar(data.charAt(begin))) {
-            begin++;
-        }
-
-        aSpan[0] = begin;
-        aSpan[1] = end;
-    }
-
-    public static boolean isEmpty(int aBegin, int aEnd)
-    {
-        return aBegin >= aEnd;
-    }
-
-    public static boolean trimChar(final char aChar)
-    {
-        switch (aChar) {
-        case '\n':
-            return true; // Line break
-        case '\r':
-            return true; // Carriage return
-        case '\t':
-            return true; // Tab
-        case '\u200E':
-            return true; // LEFT-TO-RIGHT MARK
-        case '\u200F':
-            return true; // RIGHT-TO-LEFT MARK
-        case '\u2028':
-            return true; // LINE SEPARATOR
-        case '\u2029':
-            return true; // PARAGRAPH SEPARATOR
-        default:
-            return Character.isWhitespace(aChar);
         }
     }
 
@@ -541,17 +440,17 @@ public class DocumentImportExportServiceImpl
             Map<Pair<Project, String>, Object> aBulkOperationContext)
         throws IOException, UIMAException
     {
-        Project project = aDocument.getProject();
+        var project = aDocument.getProject();
         try (var logCtx = withProjectLogger(project)) {
-            Map<Pair<Project, String>, Object> bulkOperationContext = aBulkOperationContext;
+            var bulkOperationContext = aBulkOperationContext;
             if (bulkOperationContext == null) {
                 bulkOperationContext = new HashMap<>();
             }
 
             // Either fetch the type system from the bulk-context or fetch it from the DB and store
             // it in the bulk-context to avoid further lookups in the same bulk operation
-            Pair<Project, String> exportTypeSystemKey = Pair.of(project, "exportTypeSystem");
-            TypeSystemDescription exportTypeSystem = (TypeSystemDescription) bulkOperationContext
+            var exportTypeSystemKey = Pair.of(project, "exportTypeSystem");
+            var exportTypeSystem = (TypeSystemDescription) bulkOperationContext
                     .get(exportTypeSystemKey);
             if (exportTypeSystem == null) {
                 exportTypeSystem = getTypeSystemForExport(project);
@@ -559,7 +458,7 @@ public class DocumentImportExportServiceImpl
             }
 
             try (var session = CasStorageSession.openNested()) {
-                CAS exportCas = WebAnnoCasUtil.createCas();
+                var exportCas = WebAnnoCasUtil.createCas();
                 session.add(EXPORT_CAS, EXCLUSIVE_WRITE_ACCESS, exportCas);
 
                 // Update type system the CAS, compact it (remove all non-reachable feature
@@ -574,7 +473,7 @@ public class DocumentImportExportServiceImpl
 
                 addTagsetDefinitionAnnotations(exportCas, project, bulkOperationContext);
 
-                File exportTempDir = Files.createTempDirectory("inception-export").toFile();
+                var exportTempDir = Files.createTempDirectory("inception-export").toFile();
                 try {
                     return aFormat.write(aDocument, getRealCas(exportCas), exportTempDir,
                             aStripExtension);
@@ -598,10 +497,9 @@ public class DocumentImportExportServiceImpl
     public TypeSystemDescription getTypeSystemForExport(Project aProject)
         throws ResourceInitializationException
     {
-        List<TypeSystemDescription> tsds = new ArrayList<>();
-        tsds.add(schemaTypeSystem);
-        tsds.add(annotationService.getFullProjectTypeSystem(aProject, false));
-        return mergeTypeSystems(tsds);
+        return mergeTypeSystems(asList( //
+                schemaTypeSystem, //
+                annotationService.getFullProjectTypeSystem(aProject, false)));
     }
 
     /**
@@ -629,7 +527,7 @@ public class DocumentImportExportServiceImpl
             TypeSystemDescription aFullProjectTypeSystem)
         throws ResourceInitializationException, UIMAException, IOException
     {
-        TypeSystemDescription tsd = aFullProjectTypeSystem;
+        var tsd = aFullProjectTypeSystem;
         if (tsd == null) {
             tsd = getTypeSystemForExport(aSourceDocument.getProject());
         }
@@ -640,14 +538,13 @@ public class DocumentImportExportServiceImpl
     private List<AnnotationFeature> listSupportedFeatures(Project aProject,
             Map<Pair<Project, String>, Object> aBulkOperationContext)
     {
-        Pair<Project, String> exportFeaturesKey = Pair.of(aProject, "exportFeatures");
+        var exportFeaturesKey = Pair.of(aProject, "exportFeatures");
         @SuppressWarnings("unchecked")
-        List<AnnotationFeature> features = (List<AnnotationFeature>) aBulkOperationContext
-                .get(exportFeaturesKey);
+        var features = (List<AnnotationFeature>) aBulkOperationContext.get(exportFeaturesKey);
         if (features == null) {
             features = annotationService.listSupportedFeatures(aProject).stream() //
                     .filter(AnnotationFeature::isEnabled) //
-                    .collect(toList());
+                    .toList();
             aBulkOperationContext.put(exportFeaturesKey, features);
         }
 
@@ -657,34 +554,28 @@ public class DocumentImportExportServiceImpl
     private void addOrUpdateDocumentMetadata(CAS aCas, SourceDocument aDocument, String aFileName)
         throws MalformedURLException, CASException
     {
-        // Update the source file name in case it is changed for some reason. This is
-        // necessary for the writers to create the files under the correct names.
-        File currentDocumentUri = new File(repositoryProperties.getPath().getAbsolutePath() + "/"
-                + PROJECT_FOLDER + "/" + aDocument.getProject().getId() + "/" + DOCUMENT_FOLDER
-                + "/" + aDocument.getId() + "/" + SOURCE_FOLDER);
-        DocumentMetaData documentMetadata = DocumentMetaData.get(aCas.getJCas());
-        documentMetadata.setDocumentBaseUri(currentDocumentUri.toURI().toURL().toExternalForm());
-        documentMetadata.setDocumentUri(
-                new File(currentDocumentUri, aFileName).toURI().toURL().toExternalForm());
-        documentMetadata.setCollectionId(currentDocumentUri.toURI().toURL().toExternalForm());
+        var slug = aDocument.getProject().getSlug();
+        var documentMetadata = DocumentMetaData.get(aCas.getJCas());
+        documentMetadata.setDocumentBaseUri(slug);
+        documentMetadata.setDocumentUri(slug + "/" + aFileName);
+        documentMetadata.setCollectionId(slug + "/" + aFileName);
         documentMetadata.setDocumentId(aFileName);
     }
 
     private void addLayerAndFeatureDefinitionAnnotations(CAS aCas, Project aProject,
             Map<Pair<Project, String>, Object> aBulkOperationContext)
     {
-        List<AnnotationFeature> allFeatures = listSupportedFeatures(aProject,
-                aBulkOperationContext);
+        var allFeatures = listSupportedFeatures(aProject, aBulkOperationContext);
 
-        Type layerDefType = aCas.getTypeSystem().getType(TYPE_NAME_LAYER_DEFINITION);
-        Type featureDefType = aCas.getTypeSystem().getType(TYPE_NAME_FEATURE_DEFINITION);
+        var layerDefType = aCas.getTypeSystem().getType(TYPE_NAME_LAYER_DEFINITION);
+        var featureDefType = aCas.getTypeSystem().getType(TYPE_NAME_FEATURE_DEFINITION);
 
-        Map<AnnotationLayer, List<AnnotationFeature>> featuresGroupedByLayer = allFeatures.stream() //
+        var featuresGroupedByLayer = allFeatures.stream() //
                 .collect(groupingBy(AnnotationFeature::getLayer));
 
-        List<AnnotationLayer> layers = featuresGroupedByLayer.keySet().stream()
+        var layers = featuresGroupedByLayer.keySet().stream() //
                 .sorted(comparing(AnnotationLayer::getName)) //
-                .collect(toList());
+                .toList();
 
         for (var layer : layers) {
             final var layerDefFs = aCas.createFS(layerDefType);
@@ -692,8 +583,9 @@ public class DocumentImportExportServiceImpl
             setFeature(layerDefFs, FEATURE_BASE_NAME_UI_NAME, layer.getUiName());
             aCas.addFsToIndexes(layerDefFs);
 
-            List<AnnotationFeature> features = featuresGroupedByLayer.get(layer).stream()
-                    .sorted(Comparator.comparing(AnnotationFeature::getName)).collect(toList());
+            var features = featuresGroupedByLayer.get(layer).stream() //
+                    .sorted(comparing(AnnotationFeature::getName)) //
+                    .toList();
 
             for (var feature : features) {
                 final var featureDefFs = aCas.createFS(featureDefType);
@@ -708,25 +600,25 @@ public class DocumentImportExportServiceImpl
     private void addTagsetDefinitionAnnotations(CAS aCas, Project aProject,
             Map<Pair<Project, String>, Object> aBulkOperationContext)
     {
-        List<AnnotationFeature> features = listSupportedFeatures(aProject, aBulkOperationContext);
+        var features = listSupportedFeatures(aProject, aBulkOperationContext);
 
-        for (AnnotationFeature feature : features) {
-            TagSet tagSet = feature.getTagset();
-            if (tagSet == null || CHAIN_TYPE.equals(feature.getLayer().getType())) {
+        for (var feature : features) {
+            var tagSet = feature.getTagset();
+            if (tagSet == null || ChainLayerSupport.TYPE.equals(feature.getLayer().getType())) {
                 continue;
             }
-            String aLayer = feature.getLayer().getName();
-            String aTagSetName = tagSet.getName();
 
-            Type tagsetType = getType(aCas, TagsetDescription.class);
-            Feature layerFeature = tagsetType.getFeatureByBaseName(FEATURE_BASE_NAME_LAYER);
-            Feature nameFeature = tagsetType.getFeatureByBaseName(FEATURE_BASE_NAME_NAME);
+            var aLayer = feature.getLayer().getName();
+            var aTagSetName = tagSet.getName();
+            var tagsetType = getType(aCas, TagsetDescription.class);
+            var layerFeature = tagsetType.getFeatureByBaseName(FEATURE_BASE_NAME_LAYER);
+            var nameFeature = tagsetType.getFeatureByBaseName(FEATURE_BASE_NAME_NAME);
 
-            boolean tagSetModified = false;
+            var tagSetModified = false;
             // modify existing tagset Name
-            for (FeatureStructure fs : select(aCas, tagsetType)) {
-                String layer = fs.getStringValue(layerFeature);
-                String tagSetName = fs.getStringValue(nameFeature);
+            for (var fs : select(aCas, tagsetType)) {
+                var layer = fs.getStringValue(layerFeature);
+                var tagSetName = fs.getStringValue(nameFeature);
                 if (layer.equals(aLayer)) {
                     // only if the tagset name is changed
                     if (!aTagSetName.equals(tagSetName)) {
@@ -739,7 +631,7 @@ public class DocumentImportExportServiceImpl
             }
 
             if (!tagSetModified) {
-                FeatureStructure fs = aCas.createFS(tagsetType);
+                var fs = aCas.createFS(tagsetType);
                 fs.setStringValue(layerFeature, aLayer);
                 fs.setStringValue(nameFeature, aTagSetName);
                 aCas.addFsToIndexes(fs);
