@@ -18,10 +18,11 @@
 package de.tudarmstadt.ukp.inception.ui.core.docanno.layer;
 
 import java.io.IOException;
+import java.lang.invoke.MethodHandles;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.apache.uima.cas.CAS;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.context.event.EventListener;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -43,6 +44,8 @@ import de.tudarmstadt.ukp.inception.ui.core.docanno.config.DocumentMetadataLayer
  */
 public class DocumentMetadataLayerSingletonCreatingWatcher
 {
+    private static final Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+
     private final AnnotationSchemaService annotationService;
     private final LayerSupportRegistry layerSupportRegistry;
 
@@ -59,7 +62,7 @@ public class DocumentMetadataLayerSingletonCreatingWatcher
         return annotationService.listAnnotationLayer(aProject).stream()
                 .filter(layer -> DocumentMetadataLayerSupport.TYPE.equals(layer.getType())
                         && layer.isEnabled())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @EventListener
@@ -71,16 +74,21 @@ public class DocumentMetadataLayerSingletonCreatingWatcher
             return;
         }
 
-        CAS cas = aEvent.getCas();
-        for (AnnotationLayer layer : listMetadataLayers(aEvent.getDocument().getProject())) {
+        var cas = aEvent.getCas();
+        for (var layer : listMetadataLayers(aEvent.getDocument().getProject())) {
             if (!getLayerSupport(layer).readTraits(layer).isSingleton()) {
                 continue;
             }
 
-            DocumentMetadataLayerAdapter adapter = (DocumentMetadataLayerAdapter) annotationService
-                    .getAdapter(layer);
-            if (cas.select(adapter.getAnnotationType(cas)).isEmpty()) {
-                adapter.add(aEvent.getDocument(), aEvent.getSessionOwner(), cas);
+            var adapter = (DocumentMetadataLayerAdapter) annotationService.getAdapter(layer);
+            var maybeType = adapter.getAnnotationType(cas);
+            if (maybeType.isPresent()) {
+                if (cas.select(maybeType.get()).isEmpty()) {
+                    adapter.add(aEvent.getDocument(), aEvent.getSessionOwner(), cas);
+                }
+            }
+            else {
+                LOG.warn("CAS does not contain type [{}] - not adding singleton!", layer.getName());
             }
         }
     }
