@@ -18,19 +18,16 @@
 package de.tudarmstadt.ukp.inception.recommendation.project;
 
 import static de.tudarmstadt.ukp.inception.recommendation.api.RecommendationService.MAX_RECOMMENDATIONS_CAP;
-import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.RELATION_TYPE;
-import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.SPAN_TYPE;
+import static de.tudarmstadt.ukp.inception.support.lambda.HtmlElementEvents.CHANGE_EVENT;
+import static de.tudarmstadt.ukp.inception.support.lambda.LambdaBehavior.enabledWhenNot;
 import static de.tudarmstadt.ukp.inception.support.lambda.LambdaBehavior.visibleWhen;
-import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
 import static java.util.stream.Collectors.toList;
 
-import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.wicket.ajax.AjaxRequestTarget;
@@ -54,17 +51,18 @@ import org.apache.wicket.validation.IValidatable;
 import org.apache.wicket.validation.IValidator;
 import org.apache.wicket.validation.ValidationError;
 
-import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocumentState;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationFeature;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
 import de.tudarmstadt.ukp.clarin.webanno.model.Project;
 import de.tudarmstadt.ukp.clarin.webanno.security.UserDao;
 import de.tudarmstadt.ukp.dkpro.core.api.segmentation.type.Sentence;
 import de.tudarmstadt.ukp.dkpro.core.api.segmentation.type.Token;
+import de.tudarmstadt.ukp.inception.annotation.layer.chain.ChainLayerSupport;
 import de.tudarmstadt.ukp.inception.recommendation.api.RecommendationService;
 import de.tudarmstadt.ukp.inception.recommendation.api.RecommenderFactoryRegistry;
 import de.tudarmstadt.ukp.inception.recommendation.api.model.Recommender;
 import de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService;
+import de.tudarmstadt.ukp.inception.schema.api.feature.FeatureSupportRegistry;
 import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxFormComponentUpdatingBehavior;
 import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxFormSubmittingBehavior;
 import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxLink;
@@ -99,6 +97,7 @@ public class RecommenderEditorPanel
     private @SpringBean AnnotationSchemaService annotationSchemaService;
     private @SpringBean RecommenderFactoryRegistry recommenderRegistry;
     private @SpringBean ApplicationEventPublisherHolder appEventPublisherHolder;
+    private @SpringBean FeatureSupportRegistry featureSupportRegistry;
     private @SpringBean UserDao userDao;
 
     private TextField<String> nameField;
@@ -113,7 +112,6 @@ public class RecommenderEditorPanel
     private IModel<Project> projectModel;
     private IModel<Recommender> recommenderModel;
     private boolean autoGenerateName;
-    private IModel<Set<AnnotationDocumentState>> statesForTraining;
 
     public RecommenderEditorPanel(String aId, IModel<Project> aProject,
             IModel<Recommender> aRecommender)
@@ -126,7 +124,7 @@ public class RecommenderEditorPanel
         projectModel = aProject;
         recommenderModel = aRecommender;
 
-        Form<Recommender> form = new Form<>(MID_FORM, CompoundPropertyModel.of(aRecommender));
+        var form = new Form<>(MID_FORM, CompoundPropertyModel.of(aRecommender));
         // Need to set this explicitly to cover the case where we might switch from a recommender
         // which has no upload parts in its traits to one which has.
         // See: #1552 Changing recommender type throws exception
@@ -140,10 +138,11 @@ public class RecommenderEditorPanel
 
         autoGenerateNameCheckBox = new CheckBox(MID_AUTO_GENERATED_NAME,
                 PropertyModel.of(this, "autoGenerateName"));
-        autoGenerateNameCheckBox.add(new LambdaAjaxFormComponentUpdatingBehavior("change", t -> {
-            autoUpdateName(t, nameField, recommenderModel.getObject());
-            t.add(autoGenerateNameCheckBox);
-        }));
+        autoGenerateNameCheckBox
+                .add(new LambdaAjaxFormComponentUpdatingBehavior(CHANGE_EVENT, t -> {
+                    autoUpdateName(t, nameField, recommenderModel.getObject());
+                    t.add(autoGenerateNameCheckBox);
+                }));
         form.add(autoGenerateNameCheckBox);
 
         form.add(new CheckBox(MID_ENABLED).setOutputMarkupId(true));
@@ -152,7 +151,7 @@ public class RecommenderEditorPanel
         layerChoice.setChoiceRenderer(new ChoiceRenderer<>("uiName"));
         layerChoice.setRequired(true);
         // The features and tools depend on the layer, so reload them when the layer is changed
-        layerChoice.add(new LambdaAjaxFormComponentUpdatingBehavior("change", t -> {
+        layerChoice.add(new LambdaAjaxFormComponentUpdatingBehavior(CHANGE_EVENT, t -> {
             toolChoice.setModelObject(null);
             featureChoice.setModelObject(null);
             autoUpdateName(t, nameField, recommenderModel.getObject());
@@ -161,6 +160,7 @@ public class RecommenderEditorPanel
             t.add(autoGenerateNameCheckBox, form.get(MID_TOOL), form.get(MID_FEATURE),
                     form.get(MID_MAX_RECOMMENDATIONS), activationContainer, traitsContainer);
         }));
+        layerChoice.add(enabledWhenNot(recommenderModel.map(Recommender::getId).isPresent()));
         form.add(layerChoice);
 
         featureChoice = new DropDownChoice<>(MID_FEATURE, this::listFeatures);
@@ -173,7 +173,7 @@ public class RecommenderEditorPanel
             }
         }));
         // The tools depend on the feature, so reload the tools when the feature is changed
-        featureChoice.add(new LambdaAjaxFormComponentUpdatingBehavior("change", t -> {
+        featureChoice.add(new LambdaAjaxFormComponentUpdatingBehavior(CHANGE_EVENT, t -> {
             toolChoice.setModelObject(null);
             autoUpdateName(t, nameField, recommenderModel.getObject());
             // Need to add the autoGenerateNameCheckBox here otherwise it looses its form-updating
@@ -181,10 +181,11 @@ public class RecommenderEditorPanel
             t.add(autoGenerateNameCheckBox, form.get(MID_TOOL), form.get(MID_MAX_RECOMMENDATIONS),
                     activationContainer, traitsContainer);
         }));
+        featureChoice.add(enabledWhenNot(recommenderModel.map(Recommender::getId).isPresent()));
         form.add(featureChoice);
 
-        IModel<Pair<String, String>> toolModel = LambdaModelAdapter.of(() -> {
-            String name = recommenderModel.getObject().getTool();
+        var toolModel = LambdaModelAdapter.of(() -> {
+            var name = recommenderModel.getObject().getTool();
             var factory = recommenderRegistry.getFactory(name);
             return factory != null ? Pair.of(factory.getId(), factory.getName()) : null;
         }, (v) -> recommenderModel.getObject().setTool(v != null ? v.getKey() : null));
@@ -214,13 +215,14 @@ public class RecommenderEditorPanel
         toolChoice.setChoiceRenderer(new ChoiceRenderer<>("value"));
         toolChoice.setRequired(true);
         toolChoice.setOutputMarkupId(true);
-        toolChoice.add(new LambdaAjaxFormComponentUpdatingBehavior("change", t -> {
+        toolChoice.add(new LambdaAjaxFormComponentUpdatingBehavior(CHANGE_EVENT, t -> {
             autoUpdateName(t, nameField, recommenderModel.getObject());
             // Need to add the autoGenerateNameCheckBox here otherwise it looses its form-updating
             // behavior - no idea why
             t.add(autoGenerateNameCheckBox, form.get(MID_MAX_RECOMMENDATIONS), activationContainer,
                     traitsContainer);
         }));
+        toolChoice.add(enabledWhenNot(recommenderModel.map(Recommender::getId).isPresent()));
         form.add(toolChoice);
 
         form.add(activationContainer = new WebMarkupContainer(MID_ACTIVATION_CONTAINER));
@@ -231,19 +233,24 @@ public class RecommenderEditorPanel
 
         activationContainer
                 .add(new CheckBox(MID_ALWAYS_SELECTED).setOutputMarkupPlaceholderTag(true)
-                        .add(new LambdaAjaxFormSubmittingBehavior("change",
+                        .add(new LambdaAjaxFormSubmittingBehavior(CHANGE_EVENT,
                                 t -> t.add(activationContainer.get(MID_THRESHOLD)))));
 
-        activationContainer.add(new NumberTextField<>(MID_THRESHOLD, Double.class).setMinimum(0.0d)
-                .setMaximum(100.0d).setStep(0.01d).setOutputMarkupPlaceholderTag(true)
+        activationContainer.add(new NumberTextField<>(MID_THRESHOLD, Double.class) //
+                .setMinimum(0.0d) //
+                .setMaximum(100.0d) //
+                .setStep(0.01d) //
+                .setOutputMarkupPlaceholderTag(true) //
                 .add(visibleWhen(() -> !recommenderModel.map(Recommender::isAlwaysSelected)
                         .orElse(false).getObject())));
 
-        form.add(
-                new NumberTextField<>(MID_MAX_RECOMMENDATIONS, Integer.class).setMinimum(1)
-                        .setMaximum(MAX_RECOMMENDATIONS_CAP).setStep(1)
-                        .setOutputMarkupPlaceholderTag(true)
-                        .add(visibleWhen(() -> toolChoice.getModel()
+        form.add(new NumberTextField<>(MID_MAX_RECOMMENDATIONS, Integer.class) //
+                .setMinimum(1) //
+                .setMaximum(MAX_RECOMMENDATIONS_CAP) //
+                .setStep(1) //
+                .setOutputMarkupPlaceholderTag(true) //
+                .add(visibleWhen(
+                        () -> toolChoice.getModel()
                                 .map(_tool -> recommenderRegistry.getFactory(_tool.getKey())
                                         .isMultipleRecommendationProvider())
                                 .orElse(false).getObject())));
@@ -265,43 +272,6 @@ public class RecommenderEditorPanel
                 actionSave(target);
             }
         });
-
-        // We need to invert the states in documentStates, as the recommender stores the
-        // ones to ignore, not the ones to consider
-        statesForTraining = new IModel<Set<AnnotationDocumentState>>()
-        {
-            private static final long serialVersionUID = -6249453365767581031L;
-
-            @Override
-            public void setObject(Set<AnnotationDocumentState> states)
-            {
-                // The model can be null after save and delete
-                if (recommenderModel.getObject() != null) {
-                    recommenderModel.getObject().setStatesIgnoredForTraining(invert(states));
-                }
-            }
-
-            @Override
-            public Set<AnnotationDocumentState> getObject()
-            {
-                Set<AnnotationDocumentState> ignoredStates = recommenderModel.getObject()
-                        .getStatesIgnoredForTraining();
-
-                return invert(ignoredStates);
-            }
-
-            private Set<AnnotationDocumentState> invert(Set<AnnotationDocumentState> states)
-            {
-                Set<AnnotationDocumentState> result = getAllPossibleDocumentStates();
-
-                if (states == null) {
-                    return result;
-                }
-
-                result.removeAll(states);
-                return result;
-            }
-        };
 
         form.add(new LambdaAjaxLink(MID_DELETE, this::actionDelete)
                 .onConfigure(_this -> _this.setVisible(form.getModelObject().getId() != null)));
@@ -336,7 +306,7 @@ public class RecommenderEditorPanel
             return;
         }
 
-        Recommender recommender = recommenderModel.getObject();
+        var recommender = recommenderModel.getObject();
         // check if recommender and layer still match
         var factory = recommenderRegistry.getFactory(aToolModel.getObject().getKey());
         if (!factory.accepts(recommender.getLayer(), recommender.getFeature())) {
@@ -358,7 +328,7 @@ public class RecommenderEditorPanel
 
         var factory = recommenderRegistry.getFactory(aRecommender.getTool());
 
-        String factoryName = factory != null ? factory.getName() : "NO FACTORY!";
+        var factoryName = factory != null ? factory.getName() : "NO FACTORY!";
 
         return String.format(Locale.US, "[%s@%s] %s", aRecommender.getLayer().getUiName(),
                 aRecommender.getFeature().getUiName(), factoryName);
@@ -384,12 +354,7 @@ public class RecommenderEditorPanel
         // Since toolChoice uses a lambda model, it needs to be notified explicitly.
         toolChoice.modelChanged();
 
-        Recommender recommender = recommenderModel.getObject();
-
-        // New recommenders should run on all states
-        if (recommender.getId() == null) {
-            statesForTraining.setObject(getAllPossibleDocumentStates());
-        }
+        var recommender = recommenderModel.getObject();
 
         // For new recommenders, default to auto-generation of name, for existing recommenders,
         // do not auto-generate name unless asked to
@@ -406,11 +371,10 @@ public class RecommenderEditorPanel
     private List<AnnotationLayer> listLayers()
     {
         return annotationSchemaService.listAnnotationLayer(projectModel.getObject()).stream() //
-                .filter(layer -> (SPAN_TYPE.equals(layer.getType())
-                        || RELATION_TYPE.equals(layer.getType())) && //
-                        !(Token._TypeName.equals(layer.getName())
-                                || Sentence._TypeName.equals(layer.getName())))
-                .collect(toList());
+                .filter(layer -> !ChainLayerSupport.TYPE.equals(layer.getType()) && //
+                        !Token._TypeName.equals(layer.getName()) && //
+                        !Sentence._TypeName.equals(layer.getName()))
+                .toList();
     }
 
     private List<AnnotationFeature> listFeatures()
@@ -419,13 +383,14 @@ public class RecommenderEditorPanel
             return emptyList();
         }
 
-        AnnotationLayer layer = recommenderModel.getObject().getLayer();
+        var layer = recommenderModel.getObject().getLayer();
         if (layer == null) {
             return emptyList();
         }
 
         return annotationSchemaService.listSupportedFeatures(layer).stream()
                 .filter(feat -> feat.getType() != null) //
+                .filter(feat -> featureSupportRegistry.isAccessible(feat)) //
                 .collect(toList());
     }
 
@@ -435,8 +400,8 @@ public class RecommenderEditorPanel
             return emptyList();
         }
 
-        AnnotationLayer layer = recommenderModel.getObject().getLayer();
-        AnnotationFeature feature = recommenderModel.getObject().getFeature();
+        var layer = recommenderModel.getObject().getLayer();
+        var feature = recommenderModel.getObject().getFeature();
         if (layer == null || feature == null) {
             return emptyList();
         }
@@ -449,7 +414,7 @@ public class RecommenderEditorPanel
 
     private void actionSave(AjaxRequestTarget aTarget)
     {
-        Recommender recommender = recommenderModel.getObject();
+        var recommender = recommenderModel.getObject();
         recommender.setProject(recommender.getLayer().getProject());
 
         recommendationService.createOrUpdateRecommender(recommender);
@@ -477,11 +442,6 @@ public class RecommenderEditorPanel
 
         // Reload whole panel because master panel also needs to be reloaded.
         aTarget.add(findParent(ProjectRecommendersPanel.class));
-    }
-
-    private static Set<AnnotationDocumentState> getAllPossibleDocumentStates()
-    {
-        return new HashSet<>(asList(AnnotationDocumentState.values()));
     }
 
     private class RecommenderExistsValidator
