@@ -21,61 +21,69 @@
  */
 package de.tudarmstadt.ukp.inception.ui.curation.sidebar;
 
+import static de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocumentStateChangeFlag.EXPLICIT_ANNOTATOR_USER_ACTION;
 import static de.tudarmstadt.ukp.clarin.webanno.model.PermissionLevel.ANNOTATOR;
 import static de.tudarmstadt.ukp.clarin.webanno.model.SourceDocumentState.CURATION_FINISHED;
 import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.CURATION_USER;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.unmodifiableList;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import java.io.IOException;
+import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
-import java.util.stream.Collectors;
-
-import javax.persistence.EntityManager;
 
 import org.apache.commons.lang3.Validate;
 import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.apache.commons.lang3.builder.HashCodeBuilder;
+import org.apache.uima.UIMAException;
 import org.apache.uima.cas.CAS;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.context.event.EventListener;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.core.session.SessionDestroyedEvent;
-import org.springframework.security.core.session.SessionInformation;
 import org.springframework.security.core.session.SessionRegistry;
 import org.springframework.transaction.annotation.Transactional;
 
 import de.tudarmstadt.ukp.clarin.webanno.api.casstorage.CasStorageService;
-import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocument;
-import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocumentState;
 import de.tudarmstadt.ukp.clarin.webanno.model.Project;
 import de.tudarmstadt.ukp.clarin.webanno.model.SourceDocument;
 import de.tudarmstadt.ukp.clarin.webanno.security.UserDao;
 import de.tudarmstadt.ukp.clarin.webanno.security.model.User;
 import de.tudarmstadt.ukp.inception.annotation.events.DocumentOpenedEvent;
-import de.tudarmstadt.ukp.inception.curation.config.CurationServiceAutoConfiguration;
+import de.tudarmstadt.ukp.inception.curation.merge.MergeStrategyFactory;
 import de.tudarmstadt.ukp.inception.curation.model.CurationSettings;
 import de.tudarmstadt.ukp.inception.curation.model.CurationSettingsId;
+import de.tudarmstadt.ukp.inception.curation.model.CurationWorkflow;
+import de.tudarmstadt.ukp.inception.curation.service.CurationDocumentService;
+import de.tudarmstadt.ukp.inception.curation.service.CurationMergeService;
+import de.tudarmstadt.ukp.inception.curation.service.CurationService;
+import de.tudarmstadt.ukp.inception.curation.sidebar.CurationSidebarProperties;
 import de.tudarmstadt.ukp.inception.documents.api.DocumentService;
 import de.tudarmstadt.ukp.inception.project.api.ProjectService;
 import de.tudarmstadt.ukp.inception.rendering.editorstate.AnnotatorState;
+import de.tudarmstadt.ukp.inception.ui.curation.sidebar.config.CurationSidebarAutoConfiguration;
+import jakarta.persistence.EntityManager;
 
 /**
  * <p>
  * This class is exposed as a Spring Component via
- * {@link CurationServiceAutoConfiguration#curationService}.
+ * {@link CurationSidebarAutoConfiguration#curationSidebarService}.
  * </p>
  */
 public class CurationSidebarServiceImpl
     implements CurationSidebarService
 {
+    private final static Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+
     // stores info on which users are selected and which doc is the curation-doc
     private ConcurrentMap<CurationSessionKey, CurationSession> sessions;
 
@@ -85,11 +93,18 @@ public class CurationSidebarServiceImpl
     private final ProjectService projectService;
     private final UserDao userRegistry;
     private final CasStorageService casStorageService;
+    private final CurationService curationService;
+    private final CurationDocumentService curationDocumentService;
+    private final CurationMergeService curationMergeService;
+    private final CurationSidebarProperties curationSidebarProperties;
 
     public CurationSidebarServiceImpl(EntityManager aEntityManager,
             DocumentService aDocumentService, SessionRegistry aSessionRegistry,
             ProjectService aProjectService, UserDao aUserRegistry,
-            CasStorageService aCasStorageService)
+            CasStorageService aCasStorageService, CurationService aCurationService,
+            CurationMergeService aCurationMergeService,
+            CurationSidebarProperties aCurationSidebarProperties,
+            CurationDocumentService aCurationDocumentService)
     {
         sessions = new ConcurrentHashMap<>();
         entityManager = aEntityManager;
@@ -98,6 +113,10 @@ public class CurationSidebarServiceImpl
         projectService = aProjectService;
         userRegistry = aUserRegistry;
         casStorageService = aCasStorageService;
+        curationService = aCurationService;
+        curationMergeService = aCurationMergeService;
+        curationSidebarProperties = aCurationSidebarProperties;
+        curationDocumentService = aCurationDocumentService;
     }
 
     /**
@@ -126,7 +145,8 @@ public class CurationSidebarServiceImpl
             if (!(aOther instanceof CurationSessionKey)) {
                 return false;
             }
-            CurationSessionKey castOther = (CurationSessionKey) aOther;
+
+            var castOther = (CurationSessionKey) aOther;
             return new EqualsBuilder().append(username, castOther.username)
                     .append(projectId, castOther.projectId).isEquals();
         }
@@ -144,21 +164,21 @@ public class CurationSidebarServiceImpl
 
     private CurationSession readSession(String aSessionOwner, long aProjectId)
     {
-        List<CurationSettings> settings = queryDBForSetting(aSessionOwner, aProjectId);
+        var settings = queryDBForSetting(aSessionOwner, aProjectId);
 
         CurationSession state;
         if (settings.isEmpty()) {
             state = new CurationSession(aSessionOwner);
         }
         else {
-            CurationSettings setting = settings.get(0);
-            Project project = projectService.getProject(aProjectId);
+            var setting = settings.get(0);
+            var project = projectService.getProject(aProjectId);
             List<User> users = new ArrayList<>();
             if (!setting.getSelectedUserNames().isEmpty()) {
                 users = setting.getSelectedUserNames().stream()
                         .map(username -> userRegistry.get(username))
                         .filter(user -> projectService.hasAnyRole(user, project)) //
-                        .collect(toList());
+                        .toList();
             }
             state = new CurationSession(setting.getCurationUserName(), users);
         }
@@ -169,20 +189,19 @@ public class CurationSidebarServiceImpl
 
     private List<CurationSettings> queryDBForSetting(String aSessionOwner, long aProjectId)
     {
-        Validate.notBlank(aSessionOwner, "User must be specified");
-        Validate.notNull(aProjectId, "project must be specified");
+        Validate.notBlank(aSessionOwner, "Session owner must be specified");
+        Validate.notNull(aProjectId, "Project must be specified");
 
-        String query = "FROM " + CurationSettings.class.getName() //
+        var query = "FROM " + CurationSettings.class.getName() //
                 + " o WHERE o.username = :username " //
                 + "AND o.projectId = :projectId";
 
-        List<CurationSettings> settings = entityManager //
+        return entityManager //
                 .createQuery(query, CurationSettings.class) //
                 .setParameter("username", aSessionOwner) //
                 .setParameter("projectId", aProjectId) //
                 .setMaxResults(1) //
                 .getResultList();
-        return settings;
     }
 
     @Transactional
@@ -207,7 +226,7 @@ public class CurationSidebarServiceImpl
         synchronized (sessions) {
             var session = sessions.get(new CurationSessionKey(aSessionOwner, aProjectId));
             if (session == null) {
-                return Collections.emptyList();
+                return emptyList();
             }
 
             var selectedUsers = session.getSelectedUsers();
@@ -223,16 +242,16 @@ public class CurationSidebarServiceImpl
         synchronized (sessions) {
             var session = sessions.get(new CurationSessionKey(aSessionOwner, aProject.getId()));
             if (session == null) {
-                return Collections.emptyList();
+                return emptyList();
             }
 
             var selectedUsers = session.getSelectedUsers();
 
             if (selectedUsers == null || selectedUsers.isEmpty()) {
-                return new ArrayList<>();
+                return emptyList();
             }
 
-            List<User> finishedUsers = listCuratableUsers(aDocument);
+            var finishedUsers = curationDocumentService.listCuratableUsers(aDocument);
             finishedUsers.retainAll(selectedUsers);
             return finishedUsers;
         }
@@ -242,43 +261,24 @@ public class CurationSidebarServiceImpl
     @Transactional
     public List<User> listCuratableUsers(String aSessionOwner, SourceDocument aDocument)
     {
-        String curationTarget = getCurationTarget(aSessionOwner, aDocument.getProject().getId());
-        return listCuratableUsers(aDocument).stream()
+        var curationTarget = getCurationTarget(aSessionOwner, aDocument.getProject().getId());
+        return curationDocumentService.listCuratableUsers(aDocument).stream()
                 .filter(user -> !user.getUsername().equals(aSessionOwner)
                         || curationTarget.equals(CURATION_USER))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Override
+    /**
+     * @return CAS associated with curation doc for the given user
+     */
+    // REC: Do we really needs this? Why not save via the AnnotationPage facilities? Or at least
+    // the curation target should already be set in the annotator state, so why not rely on that?
     @Transactional
-    public List<User> listCuratableUsers(SourceDocument aSourceDocument)
-    {
-        Validate.notNull(aSourceDocument, "Document must be specified");
-
-        String query = String.join("\n", //
-                "SELECT u FROM User u, AnnotationDocument d", //
-                "WHERE u.username = d.user", //
-                "AND d.document   = :document", //
-                "AND (d.state = :state or d.annotatorState = :ignore)", //
-                "ORDER BY u.username ASC");
-
-        List<User> finishedUsers = new ArrayList<>(entityManager //
-                .createQuery(query, User.class) //
-                .setParameter("document", aSourceDocument) //
-                .setParameter("state", AnnotationDocumentState.FINISHED) //
-                .setParameter("ignore", AnnotationDocumentState.IGNORE) //
-                .getResultList());
-
-        return finishedUsers;
-    }
-
-    @Transactional
-    @Override
-    public Optional<CAS> retrieveCurationCAS(String aSessionOwner, long aProjectId,
+    private Optional<CAS> retrieveCurationCAS(String aSessionOwner, long aProjectId,
             SourceDocument aDoc)
         throws IOException
     {
-        String curationUser = getSession(aSessionOwner, aProjectId).getCurationTarget();
+        var curationUser = getSession(aSessionOwner, aProjectId).getCurationTarget();
         if (curationUser == null) {
             return Optional.empty();
         }
@@ -286,31 +286,35 @@ public class CurationSidebarServiceImpl
         return Optional.of(documentService.readAnnotationCas(aDoc, curationUser));
     }
 
+    /**
+     * Write to CAS associated with curation doc for the given user and update timestamp
+     */
     // REC: Do we really needs this? Why not save via the AnnotationPage facilities? Or at least
     // the curation target should already be set in the annotator state, so why not rely on that?
     @Transactional
-    @Override
-    public void writeCurationCas(CAS aTargetCas, AnnotatorState aState, long aProjectId)
+    private void writeCurationCas(CAS aTargetCas, AnnotatorState aState, long aProjectId)
         throws IOException
     {
         User curator;
         synchronized (sessions) {
-            String curatorName = getSession(aState.getUser().getUsername(), aProjectId)
+            var curatorName = getSession(aState.getUser().getUsername(), aProjectId)
                     .getCurationTarget();
 
             curator = userRegistry.getUserOrCurationUser(curatorName);
         }
 
-        SourceDocument doc = aState.getDocument();
-        AnnotationDocument annoDoc = documentService.createOrGetAnnotationDocument(doc, curator);
-        documentService.writeAnnotationCas(aTargetCas, annoDoc, true);
+        var doc = aState.getDocument();
+        var annoDoc = documentService.createOrGetAnnotationDocument(doc, curator);
+        documentService.writeAnnotationCas(aTargetCas, annoDoc, EXPLICIT_ANNOTATOR_USER_ACTION);
         casStorageService.getCasTimestamp(doc, curator.getUsername())
                 .ifPresent(aState::setAnnotationDocumentTimestamp);
     }
 
+    /**
+     * Store which name the curated document should be associated with
+     */
     @Transactional
-    @Override
-    public void setCurationTarget(String aSessionOwner, Project aProject, boolean aOwnDocument)
+    private void setCurationTarget(String aSessionOwner, Project aProject, boolean aOwnDocument)
     {
         synchronized (sessions) {
             var session = sessions.get(new CurationSessionKey(aSessionOwner, aProject.getId()));
@@ -318,10 +322,13 @@ public class CurationSidebarServiceImpl
                 return;
             }
 
-            session.curationTarget = aOwnDocument
-                    && projectService.hasRole(aSessionOwner, aProject, ANNOTATOR) ? aSessionOwner
-                            : CURATION_USER;
-
+            if (curationSidebarProperties.isOwnUserCurationTargetEnabled() && aOwnDocument
+                    && projectService.hasRole(aSessionOwner, aProject, ANNOTATOR)) {
+                session.setCurationTarget(aSessionOwner);
+            }
+            else {
+                session.setCurationTarget(CURATION_USER);
+            }
         }
     }
 
@@ -372,11 +379,13 @@ public class CurationSidebarServiceImpl
                 listCuratableUsers(aSessionOwner, aDocument));
     }
 
+    // Set order so this is handled before session info is removed from sessionRegistry
+    @Order(Ordered.HIGHEST_PRECEDENCE)
     @EventListener
     @Transactional
     public void onSessionDestroyed(SessionDestroyedEvent event)
     {
-        SessionInformation info = sessionRegistry.getSessionInformation(event.getId());
+        var info = sessionRegistry.getSessionInformation(event.getId());
 
         if (info == null) {
             return;
@@ -407,14 +416,14 @@ public class CurationSidebarServiceImpl
      */
     private void storeCurationSettings(User aSessionOwner)
     {
-        String aUsername = aSessionOwner.getUsername();
+        var aUsername = aSessionOwner.getUsername();
 
-        for (Project project : projectService.listAccessibleProjects(aSessionOwner)) {
-            Long projectId = project.getId();
+        for (var project : projectService.listAccessibleProjects(aSessionOwner)) {
+            var projectId = project.getId();
             Set<String> usernames = null;
             if (sessions.containsKey(new CurationSessionKey(aUsername, projectId))) {
 
-                CurationSession state = sessions.get(new CurationSessionKey(aUsername, projectId));
+                var state = sessions.get(new CurationSessionKey(aUsername, projectId));
                 // user does not exist anymore or is anonymous authentication
                 if (state == null) {
                     continue;
@@ -428,7 +437,7 @@ public class CurationSidebarServiceImpl
 
                 // get setting from context and update values if it exists, else save new setting
                 // to db
-                CurationSettings setting = entityManager.find(CurationSettings.class,
+                var setting = entityManager.find(CurationSettings.class,
                         new CurationSettingsId(projectId, aUsername));
 
                 if (setting != null) {
@@ -446,9 +455,9 @@ public class CurationSidebarServiceImpl
 
     private void closeAllSessions(User aSessionOwner)
     {
-        projectService.listAccessibleProjects(aSessionOwner).stream() //
-                .map(Project::getId) //
-                .forEach(pId -> closeSession(aSessionOwner.getUsername(), pId));
+        synchronized (sessions) {
+            sessions.keySet().removeIf(k -> k.username.equals(aSessionOwner.getUsername()));
+        }
     }
 
     @Transactional
@@ -466,6 +475,24 @@ public class CurationSidebarServiceImpl
     {
         synchronized (sessions) {
             getSession(aSessionOwner, aProjectId).setShowAll(aValue);
+        }
+    }
+
+    @Transactional
+    @Override
+    public boolean isShowScore(String aSessionOwner, Long aProjectId)
+    {
+        synchronized (sessions) {
+            return getSession(aSessionOwner, aProjectId).isShowScore();
+        }
+    }
+
+    @Transactional
+    @Override
+    public void setShowScore(String aSessionOwner, Long aProjectId, boolean aValue)
+    {
+        synchronized (sessions) {
+            getSession(aSessionOwner, aProjectId).setShowScore(aValue);
         }
     }
 
@@ -510,12 +537,41 @@ public class CurationSidebarServiceImpl
     @Override
     public boolean isCurationFinished(AnnotatorState aState, String aSessionOwner)
     {
-        String username = aState.getUser().getUsername();
-        SourceDocument sourceDoc = aState.getDocument();
+        var username = aState.getUser().getUsername();
+        var sourceDoc = aState.getDocument();
         return (username.equals(aSessionOwner)
                 && documentService.isAnnotationFinished(sourceDoc, aState.getUser()))
                 || (username.equals(CURATION_USER)
                         && sourceDoc.getState().equals(CURATION_FINISHED));
+    }
+
+    @SuppressWarnings({ "rawtypes", "unchecked" })
+    @Override
+    @Transactional
+    public MergeStrategyFactory<?> merge(AnnotatorState aState, CurationWorkflow aWorkflow,
+            String aCurator, Collection<User> aUsers, boolean aClearTargetCas)
+        throws IOException, UIMAException
+    {
+        MergeStrategyFactory factory = curationService.getMergeStrategyFactory(aWorkflow);
+        var traits = factory.readTraits(aWorkflow);
+        var mergeStrategy = factory.makeStrategy(traits);
+        var doc = aState.getDocument();
+        var aTargetCas = retrieveCurationCAS(aCurator, doc.getProject().getId(), doc).orElseThrow(
+                () -> new IllegalArgumentException("No target CAS configured in curation state"));
+
+        var userCases = documentService.readAllCasesSharedNoUpgrade(doc, aUsers);
+
+        // FIXME: should merging not overwrite the current users annos? (can result in
+        // deleting the users annotations!!!), currently fixed by warn message to user
+        // prepare merged CAS
+        curationMergeService.mergeCasses(doc, aState.getUser().getUsername(), aTargetCas, userCases,
+                mergeStrategy, aState.getAnnotationLayers(), aClearTargetCas);
+
+        // write back and update timestamp
+        writeCurationCas(aTargetCas, aState, doc.getProject().getId());
+
+        LOG.debug("Merge done");
+        return factory;
     }
 
     private class CurationSession
@@ -525,6 +581,7 @@ public class CurationSidebarServiceImpl
         // the curationdoc can be retrieved from user (CURATION or current) and projectId
         private String curationTarget;
         private boolean showAll;
+        private boolean showScore;
 
         public CurationSession(String aUser)
         {
@@ -565,6 +622,16 @@ public class CurationSidebarServiceImpl
         public void setShowAll(boolean aShowAll)
         {
             showAll = aShowAll;
+        }
+
+        public boolean isShowScore()
+        {
+            return showScore;
+        }
+
+        public void setShowScore(boolean aShowScore)
+        {
+            showScore = aShowScore;
         }
     }
 }
