@@ -20,9 +20,9 @@ package de.tudarmstadt.ukp.inception.ui.core.dashboard.projectlist;
 import static de.tudarmstadt.ukp.clarin.webanno.model.PermissionLevel.ANNOTATOR;
 import static de.tudarmstadt.ukp.clarin.webanno.model.PermissionLevel.CURATOR;
 import static de.tudarmstadt.ukp.clarin.webanno.model.PermissionLevel.MANAGER;
+import static de.tudarmstadt.ukp.inception.support.lambda.HtmlElementEvents.CHANGE_EVENT;
 import static java.lang.invoke.MethodHandles.lookup;
 import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
 import static org.slf4j.LoggerFactory.getLogger;
 
 import java.io.IOException;
@@ -34,11 +34,13 @@ import org.apache.wicket.extensions.ajax.markup.html.modal.ModalDialog;
 import org.apache.wicket.feedback.IFeedback;
 import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.basic.Label;
+import org.apache.wicket.markup.html.form.CheckBox;
 import org.apache.wicket.markup.html.image.Image;
 import org.apache.wicket.markup.html.list.ListItem;
 import org.apache.wicket.markup.html.list.ListView;
 import org.apache.wicket.markup.html.panel.Panel;
 import org.apache.wicket.model.LambdaModel;
+import org.apache.wicket.model.PropertyModel;
 import org.apache.wicket.request.mapper.parameter.PageParameters;
 import org.apache.wicket.request.resource.PackageResourceReference;
 import org.apache.wicket.spring.injection.annot.SpringBean;
@@ -47,10 +49,13 @@ import org.slf4j.Logger;
 import de.tudarmstadt.ukp.clarin.webanno.model.Project;
 import de.tudarmstadt.ukp.clarin.webanno.project.initializers.QuickProjectInitializer;
 import de.tudarmstadt.ukp.clarin.webanno.security.UserDao;
-import de.tudarmstadt.ukp.clarin.webanno.security.model.User;
 import de.tudarmstadt.ukp.clarin.webanno.ui.core.page.ProjectPageBase;
+import de.tudarmstadt.ukp.inception.preferences.PreferenceKey;
+import de.tudarmstadt.ukp.inception.preferences.PreferencesService;
+import de.tudarmstadt.ukp.inception.project.api.ProjectInitializationRequest;
 import de.tudarmstadt.ukp.inception.project.api.ProjectInitializer;
 import de.tudarmstadt.ukp.inception.project.api.ProjectService;
+import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxFormComponentUpdatingBehavior;
 import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxLink;
 import de.tudarmstadt.ukp.inception.ui.core.dashboard.project.ProjectDashboardPage;
 
@@ -59,6 +64,9 @@ public class ProjectTemplateSelectionDialogPanel
 {
     private static final long serialVersionUID = 2112018755924139726L;
 
+    public static final PreferenceKey<ProjectInitializationState> KEY_PROJECT_INITIALIZATION = new PreferenceKey<>(
+            ProjectInitializationState.class, "project-overview/project-initialization");
+
     private static final Logger LOG = getLogger(lookup().lookupClass());
 
     private static final PackageResourceReference NO_THUMBNAIL = new PackageResourceReference(
@@ -66,12 +74,16 @@ public class ProjectTemplateSelectionDialogPanel
 
     private @SpringBean ProjectService projectService;
     private @SpringBean UserDao userRepository;
+    private @SpringBean PreferencesService preferencesService;
 
     private LambdaAjaxLink closeDialogButton;
+    private boolean includeSampleData;
 
     public ProjectTemplateSelectionDialogPanel(String aId)
     {
         super(aId);
+
+        loadPreferences();
 
         var initializers = new ListView<QuickProjectInitializer>("templates",
                 LambdaModel.of(this::listInitializers))
@@ -98,9 +110,31 @@ public class ProjectTemplateSelectionDialogPanel
         container.setOutputMarkupId(true);
         queue(container);
 
+        var includeSampledataSwitch = new CheckBox("includeSampleData",
+                PropertyModel.of(this, "includeSampleData"));
+        includeSampledataSwitch.setOutputMarkupId(true);
+        includeSampledataSwitch.add(new LambdaAjaxFormComponentUpdatingBehavior(CHANGE_EVENT,
+                this::actionUpdatePreferences));
+        queue(includeSampledataSwitch);
+
         closeDialogButton = new LambdaAjaxLink("closeDialog", this::actionCancel);
         closeDialogButton.setOutputMarkupId(true);
         queue(closeDialogButton);
+    }
+
+    private void loadPreferences()
+    {
+        var user = userRepository.getCurrentUser();
+        var prefs = preferencesService.loadTraitsForUser(KEY_PROJECT_INITIALIZATION, user);
+        includeSampleData = prefs.isIncludeSampleData();
+    }
+
+    private void actionUpdatePreferences(AjaxRequestTarget aTarget)
+    {
+        var user = userRepository.getCurrentUser();
+        var prefs = preferencesService.loadTraitsForUser(KEY_PROJECT_INITIALIZATION, user);
+        prefs.setIncludeSampleData(includeSampleData);
+        preferencesService.saveTraitsForUser(KEY_PROJECT_INITIALIZATION, user, prefs);
     }
 
     private List<QuickProjectInitializer> listInitializers()
@@ -108,24 +142,30 @@ public class ProjectTemplateSelectionDialogPanel
         return projectService.listProjectInitializers().stream()
                 .filter(initializer -> initializer instanceof QuickProjectInitializer)
                 .map(initializer -> (QuickProjectInitializer) initializer) //
-                .collect(toList());
+                .toList();
     }
 
     private void actionCreateProject(AjaxRequestTarget aTarget, ProjectInitializer aInitializer)
     {
-        User user = userRepository.getCurrentUser();
+        var user = userRepository.getCurrentUser();
         aTarget.addChildren(getPage(), IFeedback.class);
-        String projectSlug = projectService.deriveSlugFromName(user.getUsername());
+        var projectSlug = projectService.deriveSlugFromName(user.getUsername());
         projectSlug = projectService.deriveUniqueSlug(projectSlug);
 
         try {
-            Project project = new Project(projectSlug);
+            var project = new Project(projectSlug);
             project.setName(user.getUsername() + " - New project");
             projectService.createProject(project);
             projectService.assignRole(project, user, ANNOTATOR, CURATOR, MANAGER);
-            projectService.initializeProject(project, asList(aInitializer));
 
-            PageParameters pageParameters = new PageParameters();
+            var request = ProjectInitializationRequest.builder() //
+                    .withProject(project) //
+                    .withIncludeSampleData(includeSampleData) //
+                    .build();
+
+            projectService.initializeProject(request, asList(aInitializer));
+
+            var pageParameters = new PageParameters();
             ProjectPageBase.setProjectPageParameter(pageParameters, project);
             setResponsePage(ProjectDashboardPage.class, pageParameters);
         }
